--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,9 +1,9 @@
 <% layout("/layouts/boilerplate")%>
 
  <div class="row mt-3">
-        <div class="col-8 offset-3"> 
+        <div class="col-8 offset-3 resp"> 
          
-    <div class="card col-8  show-card listing-card">
+    <div class="card col-8  show-card listing-card inn">
       <h3><b><%=hotel.title%></b></h3>
       <img src="<%= hotel.image.url%>" class="card-img-top show-img" alt="Listing_image"/>
       <div class="card-body">
@@ -11,12 +11,16 @@
           <p>Owned by <i><%=hotel.owner.username%></i>.</p>
          
           <p><%=hotel.description%></p>
-          <p> Price : &#8377 <%=hotel.price.toLocaleString("en-IN")%>/per night</p>
-          <p> Location : <%=hotel.location%></p>
-          <p>Country : <%=hotel.country%></p>
+          <p> <span>Price :</span> &#8377 <%=hotel.price.toLocaleString("en-IN")%>/per night</p>
+          <p> <span>Location : </span><%=hotel.location%></p>
+          <p><span>Country </span>: <%=hotel.country%></p>
          
          </p>
-        
+         <div class="reserve">
+            <button>Book</button>
+            <button class="avail">See Availiablity</button>
+         </div>
+        <br><br>
          <div class="col1">
              <form method="Get" action="/Listings/<%=hotel._id%>/edit">
               <button class="btn btn-dark add-btn" >Edit</button>
@@ -26,17 +30,110 @@
          <form  method="get" action="/Listings/<%=hotel._id%>/delet">
           <button class="btn btn-dark add-btnn" >Delete</button>
          </form>
+         <p style ="color:red">(For Owner Only)</p>
         </div>   <br>
 
         <hr><br>
 
+         <div class="  mt-3">
+               <b><h4>What this place offers</h4></b>
+               <div class="offers">
+                   <i class="ri-restaurant-line"><span> Kitchen , </span></i>
+                   <i class="ri-car-fill"><span> Parking , </span></i>
+                  <i class="ri-t-shirt-air-fill"><span> Air conditioning , </span></i>
+                  <i class="ri-tv-2-line"><span> TV , </span></i>
+                  <i class="ri-vidicon-line"><span> Security cameras , </span></i>
+                  <i class="ri-wifi-line"><span> Wifi</span></i>
+                  <i><span> .......and many more</span></i>
+             </div>
+              <div class="d-flex justify-content-center mt-4 mb-6">
+                  <button id="offers" type="button" class="btn btn-dark"
+                                                  data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                                  Show all amenities
+                                              </button>
+</div>
+                              <div class="modal fade" id="exampleModal" tabindex="-1"
+                                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h1 class="modal-title fs-5" id="exampleModalLabel">What
+                                                                this
+                                                                place offers</h1>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <ul>
+                                                                <h5>Scenic views</h5>
+                                                                <li>Lake view</li>
+                                                                <li>Mountain view</li>
+                                                                <li>Pool view</li>
+                                                                <hr />
+                                                            </ul>
+                                                            <ul>
+                                                                <h5>Bathrooms</h5>
+                                                                <li>Cleaning products</li>
+                                                                <li>Shampoo</li>
+                                                                <li>Hot Water</li>
+                                                                <hr />
+                                                            </ul>
+                                                            <ul>
+                                                                <h5>Bedroom and laundry</h5>
+                                                                <li>Essentials</li>
+                                                                <li>Hangers</li>
+                                                                <li>Bed linen</li>
+                                                                <hr />
+                                                            </ul>
+                                                            <ul>
+                                                                <h5>Entertainment</h5>
+                                                                <li>TV with standard cable/satellite</li>
+                                                                <li>Sound system with Bluetooth and aux</li>
+                                                                <li>Pool table</li>
+                                                                <hr />
+                                                            </ul>
+                                                            <ul>
+                                                                <h5>Outdoor</h5>
+                                                                <li>Patio or balcony</li>
+                                                                <li>Garden</li>
+                                                                <li>Hammock</li>
+                                                                <li>Firepit</li>
+                                                                <li>BBQ grill</li>
+                                                                <hr />
+                                                            </ul>
+                                                            <ul>
+                                                                <h5>Kitchen and dining</h5>
+                                                                <li>Dishes and cutlery</li>
+                                                                <li>Barbecue utensils</li>
+                                                                <li>Dining table</li>
+                                                                <li>Freezer</li>
+                                                                <hr />
+                                                            </ul>
+                                                            <ul>
+                                                                <h5>Locations Features</h5>
+                                                                <li>Waterfront</li>
+                                                                <p>Right next to a body of water</p>
+                                                                <li>Lake access</li>
+                                                                <p>Guests can get to a lake using a path or dock</p>
+                                                                <li>Private entrance</li>
+                                                                <p>Separate street or building entrance</p>
+                                                            </ul>
+                                                            <ul>
+                                                                <h6>and many more...</h6>
+                                                            </ul>
+                                                        </div>
+                                                        <div class="modal-footer d-flex justify-content-center">
+                                                            <button type="button" class="btn btn-danger"
+                                                                data-bs-dismiss="modal">Close</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                            </div>
+                       </div>
+        <hr>
+       <% if(curentuserinfo){%>
         <div class="col-8  mb-3 revform">
            <h4 class="offset-4"> <b>Leave a Review</b></h4></b><br>
             <form action="/Listings/<%=hotel._id%>/reviews" method="post" novalidate class="needs-validation">
-             <!-- <div class="mb-3">
-               <label for="rating"  class="form-label">Rating :</label><br>
-              <input type="range" min="1" max="5" id="rating" name="review[rating]" "> 
-             </div> -->
+            
               <div class="mb-3">
                 <label for="rating"  class="form-label">Rating :</label><br>
                 <fieldset class="starability-slot">
@@ -60,7 +157,7 @@
            </div >
            <button type="submit" class="btn btn-dark">Submit</button>
             </form>
-        </div>
+        </div> <%}%>
         <hr>
         <div class="mb-4 mt-5" >
           <h4><b>All Reviews </b></h4>
